added alexandre's examples, updated build scripts

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,17 @@
 *.log
 *.obj
 
+.bloop/
+.bsp/
+.gradle/
+.idea/
+.metals/
+.project/
+.settings/
+.vscode/
+build/
+target/
+
 *_LOCAL/
 *_LOCAL.md
 *_LOCAL.txt
