--- a/effective-akka/ExtraPattern/pom.xml
+++ b/effective-akka/ExtraPattern/pom.xml
@@ -42,10 +42,15 @@
                             <goal>compile</goal>
                         </goals>
                         <configuration>
+                            <compilerArgs>
+                                <arg>-deprecation</arg>
+                                <arg>-language:postfixOps</arg>
+                            </compilerArgs>
                             <additionalClasspathElements>
                                 <additionalClasspathElement>${m2.config.jar}</additionalClasspathElement>
                                 <additionalClasspathElement>${m2.akka-actor.jar}</additionalClasspathElement>
                                 <additionalClasspathElement>${m2.akka-testkit.jar}</additionalClasspathElement>
+                                <additionalClasspathElement>${m2.scalatest.jar}</additionalClasspathElement>
                             </additionalClasspathElements>
                             <includes>
                                 <include>scala/**/*.scala</include>
