--- a/effective-akka/ExtraPattern/src/main/resources/application.conf
+++ b/effective-akka/ExtraPattern/src/main/resources/application.conf
@@ -1,6 +1,30 @@
-akka.loglevel = "INFO"
-akka.event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
-akka.actor.debug.autoreceive = on
-akka.actor.debug.lifecycle = on
-akka.actor.debug.receive = on
-akka.actor.debug.event-stream = on
+################################
+# Akka Application Config File #
+################################
+#
+# Some Akka components and their config file "reference.conf":
+# https://github.com/akka/akka/blob/main/akka-actor/src/main/resources/reference.conf
+# https://github.com/akka/akka/blob/main/akka-cluster/src/main/resources/reference.conf
+# https://github.com/akka/akka/blob/main/akka-remote/src/main/resources/reference.conf
+# https://github.com/akka/akka/blob/main/akka-stream/src/main/resources/reference.conf
+
+akka {
+
+  event-handlers = ["akka.event.slf4j.Slf4jEventHandler"]
+  # Options: OFF, ERROR, WARNING, INFO, DEBUG
+  loglevel = off
+  # Log the complete configuration at INFO level when the actor system is started.
+  # This is useful when you are uncertain of what configuration is used.
+  log-config-on-start = off
+  stdout-loglevel = off
+
+  actor {
+    debug {
+      autoreceive = on
+      event-stream = on
+      lifecycle = on
+      receive = on
+    }
+  }
+
+}
