--- a/effective-akka/pom.xml
+++ b/effective-akka/pom.xml
@@ -24,6 +24,7 @@
         <maven.compiler.version>3.10.0</maven.compiler.version>
         <maven.jar.version>3.0.0</maven.jar.version>
         <scala.maven.version>1.0.0</scala.maven.version>
+        <scalatest.version>3.2.11</scalatest.version>
 
         <!-- Maven plugin dependencies -->
         <m2.directory>${user.home}/.m2/repository</m2.directory>
@@ -32,6 +33,8 @@
         <m2.akka-testkit.jar>${m2.directory}/com/typesafe/akka/akka-testkit_2.13/${akka.version}/akka-testkit_2.13-${akka.version}.jar</m2.akka-testkit.jar>
         <m2.config.jar>${m2.directory}/com/typesafe/config/${config.version}/config-${config.version}.jar</m2.config.jar>
         <m2.scala-library.jar>${m2.directory}/org/scala-lang/scala-library/${scala.version}/scala-library-${scala.version}.jar</m2.scala-library.jar>
+        <m2.scalatest.jar>${m2.directory}/org/scalatest/scalatest_2.13/${scalatest.version}/scalatest_2.13-${scalatest.version}.jar</m2.scalatest.jar>
+        <m2.scalatest-funspec.jar>${m2.directory}/org/scalatest/scalatest-funspec_2.13/${scalatest.version}/scalatest-funspec_2.13-${scalatest.version}.jar</m2.scalatest-funspec.jar>
     </properties>
 
     <dependencies>
@@ -58,6 +61,13 @@
             <groupId>com.typesafe.akka</groupId>
             <artifactId>akka-testkit_2.13</artifactId>
             <version>${akka.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest -->
+        <dependency>
+            <groupId>org.scalatest</groupId>
+            <artifactId>scalatest_2.13</artifactId>
+            <version>${scalatest.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
