--- a/akka-cookbook/ivy.xml
+++ b/akka-cookbook/ivy.xml
@@ -30,5 +30,7 @@
         <dependency org="com.typesafe" name="config" rev="1.4.2"/>
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
         <dependency org="com.typesafe.akka" name="akka-actor_2.13" rev="2.6.18"/>
+        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-testkit -->
+        <dependency org="com.typesafe.akka" name="akka-testkit_2.13" rev="2.6.18"/>
     </dependencies>
 </ivy-module>
