--- a/alexandreesl-examples/common.gradle
+++ b/alexandreesl-examples/common.gradle
@@ -18,6 +18,7 @@ project.ext {
 
     scalaBinaryVersion = isScala3 ? "3" : "2.13"
     akkaVersion = "2.6.18"
+    specs2Version = "4.14.1"
     dependencies {
         if (isScala3) {
             implementation "org.scala-lang:scala3-compiler_3:$scalaVersion"
@@ -25,9 +26,13 @@ project.ext {
         else {
             implementation "org.scala-lang:scala-compiler:$scalaVersion"
         }
-        implementation "com.typesafe.akka:akka-actor_${scalaBinaryVersion}:$akkaVersion"
-        // implementation "com.typesafe.akka:akka-testkit_${scalaBinaryVersion}:$akkaVersion"
         implementation "com.typesafe:config:1.4.2"
+        implementation "com.typesafe.akka:akka-actor_${scalaBinaryVersion}:$akkaVersion"
+        // test scope
+        testImplementation 'ch.qos.logback:logback-classic:1.2.10'
+        testImplementation "com.typesafe.akka:akka-testkit_${scalaBinaryVersion}:$akkaVersion"
+        testImplementation 'junit:junit:4.13.2'
+        testImplementation "org.specs2:specs2-junit_${scalaBinaryVersion}:$specs2Version"
     }
 
     mainSourceTree = fileTree(dir: "src/main/scala", include: "**/*.scala")
