--- a/effective-akka/ivy.xml
+++ b/effective-akka/ivy.xml
@@ -30,5 +30,16 @@
         <dependency org="com.typesafe" name="config" rev="1.4.2"/>
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
         <dependency org="com.typesafe.akka" name="akka-actor_2.13" rev="2.6.18"/>
+        <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-testkit -->
+        <dependency org="com.typesafe.akka" name="akka-testkit_2.13" rev="2.6.18"/>
+
+        <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest -->
+        <dependency org="org.scalatest" name="scalatest_2.13" rev="3.2.11"/>
+        <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest-core -->
+        <dependency org="org.scalatest" name="scalatest-core_2.13" rev="3.2.11"/>
+        <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest-mustmatchers -->
+        <dependency org="org.scalatest" name="scalatest-mustmatchers_2.13" rev="3.2.11"/>
+        <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest-wordspec -->
+        <dependency org="org.scalatest" name="scalatest-wordspec_2.13" rev="3.2.11"/>
     </dependencies>
 </ivy-module>
