--- a/akka-cookbook/ivy.xml
+++ b/akka-cookbook/ivy.xml
@@ -11,13 +11,13 @@
         <dependency org="log4j" name="log4j" rev="1.2.17"/>
         
         <!-- https://mvnrepository.com/artifact/org.scala-lang/scala3-compiler_3.1.2-RC1 -->
-        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.1.2-RC1"/>
-        <dependency org="org.scala-lang" name="scala3-interfaces" rev="3.1.2-RC1"/>
-        <dependency org="org.scala-lang" name="scala3-library_3" rev="3.1.2-RC1"/>
-        <dependency org="org.scala-lang" name="scala3-staging_3" rev="3.1.2-RC1"/>
-        <dependency org="org.scala-lang" name="scala3-tasty-inspector_3" rev="3.1.2-RC1"/>
-        <dependency org="org.scala-lang" name="tasty-core_3" rev="3.1.2-RC1"/>
-        <dependency org="org.scala-lang" name="scaladoc_3" rev="3.1.2-RC1"/>
+        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.1.2"/>
+        <dependency org="org.scala-lang" name="scala3-interfaces" rev="3.1.2"/>
+        <dependency org="org.scala-lang" name="scala3-library_3" rev="3.1.2"/>
+        <dependency org="org.scala-lang" name="scala3-staging_3" rev="3.1.2"/>
+        <dependency org="org.scala-lang" name="scala3-tasty-inspector_3" rev="3.1.2"/>
+        <dependency org="org.scala-lang" name="tasty-core_3" rev="3.1.2"/>
+        <dependency org="org.scala-lang" name="scaladoc_3" rev="3.1.2"/>
         <dependency org="org.jline" name="jline-reader" rev="3.19.0"/>
         <dependency org="org.jline" name="jline-terminal" rev="3.19.0"/>
         <dependency org="org.jline" name="jline-terminal-jna" rev="3.19.0"/>
@@ -29,8 +29,8 @@
         <!-- https://mvnrepository.com/artifact/com.typesafe/config -->
         <dependency org="com.typesafe" name="config" rev="1.4.2"/>
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
-        <dependency org="com.typesafe.akka" name="akka-actor_2.13" rev="2.6.18"/>
+        <dependency org="com.typesafe.akka" name="akka-actor_2.13" rev="2.6.19"/>
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-testkit -->
-        <dependency org="com.typesafe.akka" name="akka-testkit_2.13" rev="2.6.18"/>
+        <dependency org="com.typesafe.akka" name="akka-testkit_2.13" rev="2.6.19"/>
     </dependencies>
 </ivy-module>
