--- a/alexandreesl-examples/common.gradle
+++ b/alexandreesl-examples/common.gradle
@@ -7,7 +7,7 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.1.3"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.2.1-RC2"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
@@ -17,7 +17,7 @@ project.ext {
     }
 
     scalaBinaryVersion = isScala3 ? "3" : "2.13"
-    akkaVersion = "2.6.19"
+    akkaVersion = "2.6.20"
     specs2Version = "5.0.7"
     dependencies {
         if (isScala3) {
@@ -29,7 +29,7 @@ project.ext {
         implementation "com.typesafe:config:1.4.2"
         implementation "com.typesafe.akka:akka-actor_${scalaBinaryVersion}:$akkaVersion"
         // test scope
-        testImplementation 'ch.qos.logback:logback-classic:1.2.10'
+        testImplementation 'ch.qos.logback:logback-classic:1.4.3'
         testImplementation "com.typesafe.akka:akka-testkit_${scalaBinaryVersion}:$akkaVersion"
         testImplementation 'junit:junit:4.13.2'
         testImplementation "org.specs2:specs2-junit_${scalaBinaryVersion}:$specs2Version"
