--- a/akka-cookbook/pom.xml
+++ b/akka-cookbook/pom.xml
@@ -14,13 +14,14 @@
 
         <!-- Scala settings -->
         <scala.groupId>org.scala-lang</scala.groupId>
-        <scala.version>2.13.9</scala.version>
+        <scala.version>2.13.10</scala.version>
+        <scala.binary.version>2.13</scala.binary.version>
         <scala.local.install>true</scala.local.install>
 
         <!-- Maven plugin versions -->
-        <akka.version>2.6.20</akka.version>
+        <akka.version>2.7.0</akka.version>
         <config.version>1.4.2</config.version>
-        <exec.maven.version>3.0.0</exec.maven.version>
+        <exec.maven.version>3.1.0</exec.maven.version>
         <maven.compiler.version>3.10.1</maven.compiler.version>
         <maven.jar.version>3.3.0</maven.jar.version>
         <scala.maven.version>1.0.0</scala.maven.version>
@@ -28,8 +29,8 @@
         <!-- Maven plugin dependencies -->
         <m2.directory>${user.home}/.m2/repository</m2.directory>
 
-        <m2.akka-actor.jar>${m2.directory}/com/typesafe/akka/akka-actor_2.13/${akka.version}/akka-actor_2.13-${akka.version}.jar</m2.akka-actor.jar>
-        <m2.akka-testkit.jar>${m2.directory}/com/typesafe/akka/akka-testkit_2.13/${akka.version}/akka-testkit_2.13-${akka.version}.jar</m2.akka-testkit.jar>
+        <m2.akka-actor.jar>${m2.directory}/com/typesafe/akka/akka-actor_${scala.binary.version}/${akka.version}/akka-actor_${scala.binary.version}-${akka.version}.jar</m2.akka-actor.jar>
+        <m2.akka-testkit.jar>${m2.directory}/com/typesafe/akka/akka-testkit_${scala.binary.version}/${akka.version}/akka-testkit_${scala.binary.version}-${akka.version}.jar</m2.akka-testkit.jar>
         <m2.config.jar>${m2.directory}/com/typesafe/config/${config.version}/config-${config.version}.jar</m2.config.jar>
         <m2.scala-library.jar>${m2.directory}/org/scala-lang/scala-library/${scala.version}/scala-library-${scala.version}.jar</m2.scala-library.jar>
     </properties>
@@ -50,13 +51,13 @@
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-actor_2.13</artifactId>
+            <artifactId>akka-actor_${scala.binary.version}</artifactId>
             <version>${akka.version}</version>
         </dependency>
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-testkit -->
         <dependency>
             <groupId>com.typesafe.akka</groupId>
-            <artifactId>akka-testkit_2.13</artifactId>
+            <artifactId>akka-testkit_${scala.binary.version}</artifactId>
             <version>${akka.version}</version>
             <scope>test</scope>
         </dependency>
