--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -32,15 +32,15 @@
         <maven.surefire.version>2.22.2</maven.surefire.version>
         <scala.maven.version>1.0.0</scala.maven.version>
         <scalatest.version>3.2.14</scalatest.version>
-        <slf4j.version>2.0.3</slf4j.version>
+        <slf4j.version>2.0.6</slf4j.version>
         <specs2.version>5.0.7</specs2.version>
 
         <!-- Maven plugin dependencies -->
         <m2.directory>${user.home}/.m2/repository</m2.directory>
 
-        <m2.akka-actor.jar>${m2.directory}/com/typesafe/akka/akka-actor_2.13/${akka.version}/akka-actor_2.13-${akka.version}.jar</m2.akka-actor.jar>
-        <m2.akka-actor-typed.jar>${m2.directory}/com/typesafe/akka/akka-actor-typed_3/${akka.version}/akka-actor-typed_2.13-${akka.version}.jar</m2.akka-actor-typed.jar>
-        <m2.scalatest.jar>${m2.directory}/org/scalatest/scalatest_2.13/${scalatest.version}/scalatest_2.13-${scalatest.version}.jar</m2.scalatest.jar>
+        <m2.akka-actor.jar>${m2.directory}/com/typesafe/akka/akka-actor_${scala.binary.version}/${akka.version}/akka-actor_${scala.binary.version}-${akka.version}.jar</m2.akka-actor.jar>
+        <m2.akka-actor-typed.jar>${m2.directory}/com/typesafe/akka/akka-actor-typed_3/${akka.version}/akka-actor-typed_${scala.binary.version}-${akka.version}.jar</m2.akka-actor-typed.jar>
+        <m2.scalatest.jar>${m2.directory}/org/scalatest/scalatest_${scala.binary.version}/${scalatest.version}/scalatest_${scala.binary.version}-${scalatest.version}.jar</m2.scalatest.jar>
         <m2.slf4j-api.jar>${m2.directory}/org/slf4j/slf4j-api/${slf4j.version}/slf4j-api-${slf4j.version}.jar</m2.slf4j-api.jar>
         <m2.slf4j-simple.jar>${m2.directory}/org/slf4j/slf4j-simple/${slf4j.version}/slf4j-simple-${slf4j.version}.jar</m2.slf4j-simple.jar>
         <m2.test-interface.jar>${m2.directory}/org/scala-sbt/test-interface/1.0/test-interface-1.0.jar</m2.test-interface.jar>
