--- a/akka-concurrency/ivy.xml
+++ b/akka-concurrency/ivy.xml
@@ -10,28 +10,28 @@
         <!-- https://mvnrepository.com/artifact/log4j/log4j -->
         <dependency org="log4j" name="log4j" rev="1.2.17"/>
         
-        <!-- https://mvnrepository.com/artifact/org.scala-lang/scala3-compiler_3.2.1-RC2 -->
-        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.2.1-RC2"/>
-        <dependency org="org.scala-lang" name="scala3-interfaces" rev="3.2.1-RC2"/>
-        <dependency org="org.scala-lang" name="scala3-library_3" rev="3.2.1-RC2"/>
-        <dependency org="org.scala-lang" name="scala3-staging_3" rev="3.2.1-RC2"/>
-        <dependency org="org.scala-lang" name="scala3-tasty-inspector_3" rev="3.2.1-RC2"/>
-        <dependency org="org.scala-lang" name="tasty-core_3" rev="3.2.1-RC2"/>
-        <dependency org="org.scala-lang" name="scaladoc_3" rev="3.2.1-RC2"/>
+        <!-- https://mvnrepository.com/artifact/org.scala-lang/scala3-compiler_3.2.2 -->
+        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.2.2"/>
+        <dependency org="org.scala-lang" name="scala3-interfaces" rev="3.2.2"/>
+        <dependency org="org.scala-lang" name="scala3-library_3" rev="3.2.2"/>
+        <dependency org="org.scala-lang" name="scala3-staging_3" rev="3.2.2"/>
+        <dependency org="org.scala-lang" name="scala3-tasty-inspector_3" rev="3.2.2"/>
+        <dependency org="org.scala-lang" name="tasty-core_3" rev="3.2.2"/>
+        <dependency org="org.scala-lang" name="scaladoc_3" rev="3.2.2"/>
         <dependency org="org.jline" name="jline-reader" rev="3.19.0"/>
         <dependency org="org.jline" name="jline-terminal" rev="3.19.0"/>
         <dependency org="org.jline" name="jline-terminal-jna" rev="3.19.0"/>
         <!-- see note on https://github.com/retronym/jline3#jansi-vs-jna -->
         <dependency org="net.java.dev.jna" name="jna" rev="5.12.1"/>
-        <dependency org="org.scala-lang" name="scala-library" rev="2.13.8"/>
+        <dependency org="org.scala-lang" name="scala-library" rev="2.13.10"/>
         <!-- https://mvnrepository.com/artifact/org.scala-lang.modules/scala-asm -->
         <dependency org="org.scala-lang.modules" name="scala-asm" rev="9.3.0-scala-1"/>
 
         <!-- https://mvnrepository.com/artifact/com.typesafe/config -->
         <dependency org="com.typesafe" name="config" rev="1.4.2"/>
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
-        <dependency org="com.typesafe.akka" name="akka-actor_2.13" rev="2.6.20"/>
+        <dependency org="com.typesafe.akka" name="akka-actor_2.13" rev="2.7.0"/>
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-testkit -->
-        <dependency org="com.typesafe.akka" name="akka-testkit_2.13" rev="2.6.20"/>
+        <dependency org="com.typesafe.akka" name="akka-testkit_2.13" rev="2.7.0"/>
     </dependencies>
 </ivy-module>
