--- a/effective-akka/ivy.xml
+++ b/effective-akka/ivy.xml
@@ -10,14 +10,14 @@
         <!-- https://mvnrepository.com/artifact/log4j/log4j -->
         <dependency org="log4j" name="log4j" rev="1.2.17"/>
         
-        <!-- https://mvnrepository.com/artifact/org.scala-lang/scala3-compiler_3.2.2-RC2 -->
-        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.2.2-RC2"/>
-        <dependency org="org.scala-lang" name="scala3-interfaces" rev="3.2.2-RC2"/>
-        <dependency org="org.scala-lang" name="scala3-library_3" rev="3.2.2-RC2"/>
-        <dependency org="org.scala-lang" name="scala3-staging_3" rev="3.2.2-RC2"/>
-        <dependency org="org.scala-lang" name="scala3-tasty-inspector_3" rev="3.2.2-RC2"/>
-        <dependency org="org.scala-lang" name="tasty-core_3" rev="3.2.2-RC2"/>
-        <dependency org="org.scala-lang" name="scaladoc_3" rev="3.2.2-RC2"/>
+        <!-- https://mvnrepository.com/artifact/org.scala-lang/scala3-compiler_3.2.2-->
+        <dependency org="org.scala-lang" name="scala3-compiler_3" rev="3.2.2"/>
+        <dependency org="org.scala-lang" name="scala3-interfaces" rev="3.2.2"/>
+        <dependency org="org.scala-lang" name="scala3-library_3" rev="3.2.2"/>
+        <dependency org="org.scala-lang" name="scala3-staging_3" rev="3.2.2"/>
+        <dependency org="org.scala-lang" name="scala3-tasty-inspector_3" rev="3.2.2"/>
+        <dependency org="org.scala-lang" name="tasty-core_3" rev="3.2.2"/>
+        <dependency org="org.scala-lang" name="scaladoc_3" rev="3.2.2"/>
         <dependency org="org.jline" name="jline-reader" rev="3.19.0"/>
         <dependency org="org.jline" name="jline-terminal" rev="3.19.0"/>
         <dependency org="org.jline" name="jline-terminal-jna" rev="3.19.0"/>
@@ -34,12 +34,12 @@
         <dependency org="com.typesafe.akka" name="akka-testkit_2.13" rev="2.7.0"/>
 
         <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest -->
-        <dependency org="org.scalatest" name="scalatest_2.13" rev="3.2.14"/>
+        <dependency org="org.scalatest" name="scalatest_2.13" rev="3.2.15"/>
         <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest-core -->
-        <dependency org="org.scalatest" name="scalatest-core_2.13" rev="3.2.14"/>
+        <dependency org="org.scalatest" name="scalatest-core_2.13" rev="3.2.15"/>
         <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest-mustmatchers -->
-        <dependency org="org.scalatest" name="scalatest-mustmatchers_2.13" rev="3.2.14"/>
+        <dependency org="org.scalatest" name="scalatest-mustmatchers_2.13" rev="3.2.15"/>
         <!-- https://mvnrepository.com/artifact/org.scalatest/scalatest-wordspec -->
-        <dependency org="org.scalatest" name="scalatest-wordspec_2.13" rev="3.2.14"/>
+        <dependency org="org.scalatest" name="scalatest-wordspec_2.13" rev="3.2.15"/>
     </dependencies>
 </ivy-module>
