--- a/examples/common.gradle
+++ b/examples/common.gradle
@@ -7,7 +7,7 @@ java {
 }
 
 project.ext {
-    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.2.2-RC2"
+    scalaVersion = hasProperty("scalaVersion") ? scalaVersion : "3.2.2"
     isLocalInstall = hasProperty("scalaLocalInstall") ? scalaLocalInstall.toBoolean() : false
     isScala3 = scalaVersion.startsWith("3")
     scalacMainClass = isScala3 ? "dotty.tools.dotc.Main": "scala.tools.nsc.Main"
@@ -30,7 +30,7 @@ project.ext {
         implementation "com.typesafe.akka:akka-actor_${scalaBinaryVersion}:$akkaVersion"
         implementation "com.typesafe.akka:akka-actor-typed_${scalaBinaryVersion}:$akkaVersion"
         // test scope
-        testImplementation 'ch.qos.logback:logback-classic:1.4.3'
+        testImplementation 'ch.qos.logback:logback-classic:1.4.5'
         testImplementation "com.typesafe.akka:akka-testkit_${scalaBinaryVersion}:$akkaVersion"
         testImplementation 'com.typesafe.akka:akka-actor-testkit-typed_${scalaBinaryVersion}:$akkaVersion'
         testImplementation 'junit:junit:4.13.2'
