--- a/effective-akka/Makefile.inc
+++ b/effective-akka/Makefile.inc
@@ -44,7 +44,7 @@ TOUCH      = touch
 endif
 
 ## https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor
-AKKA_VERSION = 2.7.0
+AKKA_VERSION = 2.8.0-M6
 ## https://mvnrepository.com/artifact/org.slf4j/slf4j-api
 SLF4J_VERSION = 2.0.6
 
