--- a/akka-concurrency/pom.xml
+++ b/akka-concurrency/pom.xml
@@ -19,7 +19,7 @@
         <scala.local.install>true</scala.local.install>
 
         <!-- Maven plugin versions -->
-        <akka.version>2.7.0</akka.version>
+        <akka.version>2.8.0-M6</akka.version>
         <config.version>1.4.2</config.version>
         <exec.maven.version>3.1.0</exec.maven.version>
         <maven.compiler.version>3.10.1</maven.compiler.version>
