--- a/effective-akka/common.gradle
+++ b/effective-akka/common.gradle
@@ -17,7 +17,7 @@ project.ext {
     }
 
     scalaBinaryVersion = isScala3 ? "3" : "2.13"
-    akkaVersion = "2.7.0"
+    akkaVersion = "2.8.0-M6"
     scalatestVersion = "3.2.15"
     dependencies {
         if (isScala3) { 
