--- a/effective-akka/pom.xml
+++ b/effective-akka/pom.xml
@@ -20,7 +20,7 @@
 
         <!-- Maven plugin versions -->
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
-        <akka.version>2.7.0</akka.version>
+        <akka.version>2.8.0-M6</akka.version>
         <config.version>1.4.2</config.version>
         <exec.maven.version>3.1.0</exec.maven.version>
         <maven.compiler.version>3.10.1</maven.compiler.version>
