updated akka version (2.7->2.8)

--- a/akka-concurrency/Makefile.inc
+++ b/akka-concurrency/Makefile.inc
@@ -43,9 +43,12 @@ RM         = rm
 TOUCH      = touch
 endif
 
+## https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor
+AKKA_VERSION = 2.8.0
+
 SCALA_LIB_JAR   = $(shell $(FIND) "$(LOCAL_REPO)/org/scala-lang" -name scala-library-2.13.10.jar)
 CONFIG_JAR      = $(shell $(FIND) "$(LOCAL_REPO)/com/typesafe" -name config-1.4.2.jar)
-AKKA_ACTOR_JAR  = $(shell $(FIND) "$(LOCAL_REPO)/com/typesafe" -name akka-actor_2.13-2.7.0.jar)
+AKKA_ACTOR_JAR  = $(shell $(FIND) "$(LOCAL_REPO)/com/typesafe" -name akka-actor_2.13-$(AKKA_VERSION).jar)
 
 ifeq (,$(wildcard $(CONFIG_JAR)))
 $(error Variable CONFIG_JAR is not set)
