--- a/akka-essentials/build.xml
+++ b/akka-essentials/build.xml
@@ -18,7 +18,7 @@
     </condition>
 
     <property name="cfr.version" value="0.152" />
-    <property name="akka.version" value="2.8.0-M6" />
+    <property name="akka.version" value="2.8.0" />
     <property name="config.version" value="1.4.2" />
 
     <target name="init.local" if="use.local">
