--- a/examples/ivy.xml
+++ b/examples/ivy.xml
@@ -27,8 +27,8 @@
         <dependency org="org.scala-lang.modules" name="scala-asm" rev="9.3.0-scala-1"/>
 
         <!-- https://mvnrepository.com/artifact/com.typesafe/config -->
-        <dependency org="com.typesafe" name="config" rev="1.4.2"/>
+        <!--<dependency org="com.typesafe" name="config" rev="1.4.2"/>-->
         <!-- https://mvnrepository.com/artifact/com.typesafe.akka/akka-actor -->
-        <dependency org="com.typesafe.akka" name="akka-actor_2.13" rev="2.7.0"/>
+        <dependency org="com.typesafe.akka" name="akka-actor_2.13" rev="2.8.0"/>
     </dependencies>
 </ivy-module>
